[gd_scene load_steps=6 format=3 uid="uid://dw85gqwsrj8xd"]

[ext_resource type="Script" path="res://Objects/draggable_object.gd" id="1_qafwa"]
[ext_resource type="Texture2D" uid="uid://cpelkfxdwl2u6" path="res://Textures/Food/Salt.png" id="2_6osjn"]
[ext_resource type="PackedScene" uid="uid://bs7yfid3k5idm" path="res://UI/tooltip.tscn" id="3_dimh5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bvb6a"]
size = Vector2(109, 99)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_72bhe"]
radius = 35.075
height = 108.534

[node name="DraggableObject" type="RigidBody2D"]
gravity_scale = 2.0
lock_rotation = true
freeze = true
script = ExtResource("1_qafwa")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(0.081539, 0.0790946)
texture = ExtResource("2_6osjn")

[node name="DraggableRegion" type="Area2D" parent="."]
scale = Vector2(1.5853, 1.5853)

[node name="DraggableRegionCollision" type="CollisionShape2D" parent="DraggableRegion"]
position = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_bvb6a")
debug_color = Color(0.996078, 0, 0.156863, 0.419608)

[node name="CollisionBox" type="CollisionShape2D" parent="."]
position = Vector2(-1, -23)
scale = Vector2(1.51105, 1.51105)
shape = SubResource("CapsuleShape2D_72bhe")

[node name="ToolTip" parent="." instance=ExtResource("3_dimh5")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -186.0
offset_right = 2.0
offset_bottom = -144.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.82013, 1.82013)
size_flags_horizontal = 4

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="input_event" from="DraggableRegion" to="." method="_on_draggable_region_input_event"]
[connection signal="mouse_entered" from="DraggableRegion" to="." method="_on_draggable_region_mouse_entered"]
[connection signal="mouse_exited" from="DraggableRegion" to="." method="_on_draggable_region_mouse_exited"]

[editable path="ToolTip"]
